--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Simple CI/CD
+name: My CI/CD
 
 on: push
 
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3 
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -16,11 +16,12 @@ jobs:
 
       - name: Install dependencies
         run: |
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install --upgrade pip
+          pip install -r requirements.txt
 
-      - name: Run tests
+      - name: Run Django tests
         run: |
-          if command -v pytest &> /dev/null; then pytest || echo "Tests failed but workflow continues"; else echo "No tests found"; fi
+          python manage.py test || echo "Tests failed but workflow continues"
 
       - name: Build success message
         run: echo "Build completed successfully!"
